--- a/assets/argon/scss/custom/_variables.scss
+++ b/assets/argon/scss/custom/_variables.scss
@@ -371,8 +371,8 @@ $display4-weight:             $font-weight-bold !default;
 $display-line-height:         $headings-line-height !default;
 
 $paragraph-font-size:         1.3rem !default;
-$paragraph-font-weight:       300 !default;
-$paragraph-line-height:       1.7 !default;
+$paragraph-font-weight:       400 !default;
+$paragraph-line-height:       32px;
 
 $lead-font-size:              ($paragraph-font-size * 1.25);
 $lead-font-weight:            300 !default;
