--- a/assets/argon/scss/bootstrap/_variables.scss
+++ b/assets/argon/scss/bootstrap/_variables.scss
@@ -935,7 +935,7 @@ $close-text-shadow:                 0 1px 0 $white !default;
 // Code
 
 $code-font-size:                    87.5% !default;
-$code-color:                        $pink !default;
+$code-color:                        $green !default;
 
 $kbd-padding-y:                     .2rem !default;
 $kbd-padding-x:                     .4rem !default;
